--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     {
       "name": "Travis Smith",
       "email": "t@wpsmith.net",
-      "homepage": "http://wpsmith.net/",
+      "homepage": "https://wpsmith.net/",
       "role": "Developer"
     }
   ],
@@ -19,8 +19,8 @@
     "issues": "https://github.com/wpsmith/User/issues"
   },
   "require": {
-    "php": ">=5.2.4",
-    "wpsmith/singleton": "^0.0.2"
+    "php": ">=5.6.0",
+    "wpsmith/singleton": "^1.0.0"
   },
   "autoload": {
     "psr-4": {
